# Cowbot

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
gui/: CMakeLists.txt  ChessBoardEngine.hpp  ChessBoardEvent.hpp  ChessBoardPanel.hpp  ChessBoardPiece.hpp  CowbotGui.hpp  CowbotGuiFrame.hpp  GUIDriver.cpp  MoveHistory.hpp
gui/pieces/: ChessPieces.c  ChessPieces.h  ChessPieces.hpp
include/: Attack.h  BitboardUtils.h  ChessBoard.h  FakeEval.h  Move.h  MoveGen.h  MoveOrdering.h  PRNG.h  PieceUtils.h  Search.h  TT.h  Utils.h  types.h
src/: Attack.cpp  BitboardUtils.cpp  CMakeLists.txt  ChessBoard.cpp  FakeEval.cpp  Move.cpp  MoveGen.cpp  MoveOrdering.cpp  PNRG.cpp  PieceUtils.cpp  Search.cpp  TT.cpp  Utils.cpp  main.cpp
tests/: AttackTest.cpp  CMakeLists.txt  ChessBoardTest.cpp  MoveGenTest.cpp  PerftTest.cpp  SearchTest.cpp  TTTest.cpp
